--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,6 +3,10 @@
     <label>Productos</label>
   </div>
   <div id="productList"></div>
+  <div>
+    <p>mensajes</p>
+    <p style="border: 1px solid #ccc!important;" id="messages-panel"></p>
+  </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
