--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -31,7 +31,19 @@
       {{/each}}
     </table>
   </div>
+  <div>
+    <h1>Mensajes</h1>
+  </div>
+  <div id="messageList"></div>
+  <div>
+    {{#each messages}}
+      <div>
+        <p>{{user}} : {{message}}</p>
+      </div>
+    {{/each}}
+  </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
