integrando el chat

--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -42,6 +42,12 @@
       </div>
     {{/each}}
   </div>
+  <h1>Sección del CHAT</h1>
+  <div> <input id="chat-input" /> </div>
+  <div>
+    <p>mensajes</p>
+    <p style="border: 1px solid #ccc!important;" id="messages-panel"></p>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
