--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <h1>Productos</h1>
+    <h3>Productos</h3>
   </div>
   <div id="productList"></div>
   <div>
@@ -32,9 +32,9 @@
     </table>
   </div>
   <div>
-    <h1>Mensajes</h1>
+    <h3>Mensajes</h3>
   </div>
-  <div id="messageList"></div>
+  <div id="messages-panel"></div>
   <div>
     {{#each messages}}
       <div>
@@ -42,7 +42,7 @@
       </div>
     {{/each}}
   </div>
-  <h1>Sección del CHAT</h1>
+  <h3>Sección del CHAT</h3>
   <div> <input id="chat-input" /> </div>
   <div>
     <p>mensajes</p>
