--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -4,7 +4,7 @@
   </div>
   <div id="productList"></div>
   <div>
-    <p>mensajes</p>
+    <p>los mensajes</p>
     <p style="border: 1px solid #ccc!important;" id="messages-panel"></p>
   </div>
 </div>
