--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <title>PRODUCTOS</title>
   </head>
   <body
-    style="background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(0,0,255,1)); color: white; font-size: 30px;"
+    style="background-image: linear-gradient(to top, rgba(0, 0, 100, 1), rgba(0,0,255,1)); color: white; font-size: 30px;"
   >
     {{{body}}}
   </body>
