--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PRODUCTOS</title>
+    <title>SEGUNDA ENTREGA</title>
   </head>
   <body
     style="background-image: linear-gradient(to top, rgba(0, 0, 100, 1), rgba(0,0,255,1)); color: white; font-size: 30px;"
