--- a/src/views/real_time_carts.handlebars
+++ b/src/views/real_time_carts.handlebars
@@ -8,11 +8,15 @@
       <tr style="background-color: #000000;">
         <td><b>id</b></td>
         <td><b>products</b></td>
+        <td><b>quantity</b></td>
       </tr>
       {{#each carts}}
         <tr>
           <td headers="id">{{_id}}</td>
-          <td headers="product">{{products}}</td>   
+          {{#each products}}
+            <td headers="products">{{_id}}</td>
+            <td headers="quantity">{{quantity}}</td> 
+          {{/each}}            
         </tr>
       {{/each}}
     </table>
