Avances en Pagination

--- a/src/views/real_time_carts.handlebars
+++ b/src/views/real_time_carts.handlebars
@@ -15,12 +15,12 @@
           <td headers="id">{{_id}}</td>
           {{#each products}}
             <td headers="products">{{_id}}</td>
-            <td headers="quantity">{{quantity}}</td> 
-          {{/each}}            
+            <td headers="quantity">{{quantity}}</td>
+          {{/each}}
         </tr>
       {{/each}}
     </table>
   </div>
-
+</div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
