--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -16,20 +16,18 @@
         <td><b>category</b></td>
         <td><b>thumbnails</b></td>
       </tr>
-      {{#each products}}
-      {{#each docs}}
-            <tr>
-              <td headers="id">{{_id}}</td>
-              <td headers="title">{{title}}</td>
-              <td headers="description">{{description}}</td>
-              <td headers="code">{{code}}</td>
-              <td headers="price">{{price}}</td>
-              <td headers="status">{{status}}</td>
-              <td headers="stock">{{stock}}</td>
-              <td headers="category">{{category}}</td>
-              <td headers="thumbnails">{{thumbnails}}</td>
-            </tr>
-      {{/each}}  
+      {{#each products.docs}}
+        <tr>
+          <td headers="id">{{_id}}</td>
+          <td headers="title">{{title}}</td>
+          <td headers="description">{{description}}</td>
+          <td headers="code">{{code}}</td>
+          <td headers="price">{{price}}</td>
+          <td headers="status">{{status}}</td>
+          <td headers="stock">{{stock}}</td>
+          <td headers="category">{{category}}</td>
+          <td headers="thumbnails">{{thumbnails}}</td>
+        </tr> 
       {{/each}}
     </table>
       <div>
