--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <h3>Productos</h3>
+    <h3>Products</h3>
   </div>
   <div id="productList"></div>
   <div>
@@ -15,6 +15,8 @@
         <td><b>stock</b></td>
         <td><b>category</b></td>
         <td><b>thumbnails</b></td>
+        <td><b>AddToCart</b></td>
+        <td><b>ShowProduct</b></td>
       </tr>
       {{#each products.docs}}
         <tr>
@@ -27,16 +29,18 @@
           <td headers="stock">{{stock}}</td>
           <td headers="category">{{category}}</td>
           <td headers="thumbnails">{{thumbnails}}</td>
+          <td headers="AddToCart"><a href="/api/carts/{{_id}}">Add To Cart</a></td>
+          <td headers="ShowProduct"><a href="/api/products/{{_id}}">Show</a></td>
         </tr> 
       {{/each}}
     </table>
       <div>
     {{#if products.hasPrevPage}}
-      <a href="/students?page={{products.prevPage}}">Prevoius</a>
+      <a href="/real-time-products?page={{products.prevPage}}">Prevoius</a>
     {{/if}}
     <span>Page {{products.page}} de {{products.totalPages}}</span>
     {{#if products.hasNextPage}}
-      <a href="/students?page={{products.nextPage}}">Next</a>
+      <a href="/real-time-products?page={{products.nextPage}}">Next</a>
     {{/if}}
   </div>
   </div>
