Show One Product

--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -30,7 +30,7 @@
           <td headers="category">{{category}}</td>
           <td headers="thumbnails">{{thumbnails}}</td>
           <td headers="AddToCart"><a href="/api/carts/{{_id}}">Add To Cart</a></td>
-          <td headers="ShowProduct"><a href="/api/products/{{_id}}">Show</a></td>
+          <td headers="ShowProduct"><a href="/product/{{_id}}">Show</a></td>
         </tr> 
       {{/each}}
     </table>
