One Cart Handlebars completed

--- a/src/views/real_time_products.handlebars
+++ b/src/views/real_time_products.handlebars
@@ -4,7 +4,7 @@
   </div>
   <div id="productList"></div>
   <div>
-    <table style="width:70%; background-color: #555555; font-size: 25px;">
+    <table style="width:80%; background-color: #555555; font-size: 25px;">
       <tr style="background-color: #000000;">
         <td><b>id</b></td>
         <td><b>title</b></td>
@@ -29,7 +29,7 @@
           <td headers="stock">{{stock}}</td>
           <td headers="category">{{category}}</td>
           <td headers="thumbnails">{{thumbnails}}</td>
-          <td headers="AddToCart"><a href="/api/carts/{{_id}}">Add To Cart</a></td>
+          <td headers="AddToCart"><a href="/api/carts/642d9550cbd0d8db7f237958/product/{{_id}}">Add</a></td>
           <td headers="ShowProduct"><a href="/product/{{_id}}">Show</a></td>
         </tr> 
       {{/each}}
