Home Login Signup Profile

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,6 +8,12 @@
   <body
     style="background-image: linear-gradient(to top, rgba(0, 0, 100, 1), rgba(255,0,0,1)); color: white; font-size: 30px;"
   >
+    <div>
+      <a href="/">Home</a>
+      <a href="/login">Login</a>
+      <a href="/signup">Signup</a>
+      <a href="/profile">Profile</a>
+    </div>
     {{{body}}}
   </body>
 </html>
