--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,9 +10,10 @@
   >
     <div>
       <a href="/">Home</a>
-      <a href="/login">Login</a>
-      <a href="/signup">Signup</a>
-      <a href="/profile">Profile</a>
+      <a href="/api/sessions/login">Login</a>
+      <a href="/api/sessions/signup">Signup</a>
+      <a href="/api/sessions/profile">Profile</a>
+      <a href="/api/sessions/logout">Logout</a>
     </div>
     {{{body}}}
   </body>
