--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,6 +1,6 @@
 <h1>LOGIN</h1>
 
-<form method="post" action="/api/sessions/signup">
+<form method="post" action="/api/sessions/login">
   <input type="text" placeholder="email" name="email" />
   <br />
   <input type="password" placeholder="password" name="password" />
