--- a/src/views/oneproduct.handlebars
+++ b/src/views/oneproduct.handlebars
@@ -4,7 +4,7 @@
   </div>
   <div id="oneproduct"></div>
   <div>
-    {{#each products}}
+    {{#each product}}
       <h3>ID {{_id}}</h3>
       <h3>TITLE {{title}}</h3>
       <h3>DESCRIPTION {{description}}</h3>
