--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <h1>LOGIN</h1>
 
-<form method="post" action="/api/sessions/login">
-  <input type="text" placeholder="email" name="email" />
+<form method="post" action="api/sessions/login">
+  <input type="email" placeholder="email" name="email" />
   <br />
   <input type="password" placeholder="password" name="password" />
   <br />
