--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -1,7 +1,11 @@
 <h1>REGISTER</h1>
 
-<form method="post" action="/api/sessions/signup">
-  <input type="text" placeholder="email" name="email" />
+<form method="post" action="api/sessions/signup">
+  <input type="text" placeholder="name" name="name" />
+  <br />
+  <input type="number" placeholder="edad" name="age" />
+  <br />
+  <input type="email" placeholder="email" name="email" />
   <br />
   <input type="password" placeholder="password" name="password" />
   <br />
