--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,7 @@
 <h1>LOGIN</h1>
 
+<a href="/api/sessions/github">Registrarse con github</a></br>
+
 <form method="post" action="api/sessions/login">
   <input type="email" placeholder="email" name="email" />
   <br />
