--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,13 +6,14 @@
     <title>SEGUNDA ENTREGA</title>
   </head>
   <body
-    style="background-image: linear-gradient(to top, rgba(0, 0, 100, 1), rgba(255,0,0,1)); color: white; font-size: 30px;"
+    style="background-image: linear-gradient(to top, rgb(103, 0, 0), rgba(255,0,0,1)); color: white; font-size: 30px;"
   >
     <div>
       <a href="/">Home</a>
       <a href="/login">Login</a>
       <a href="/signup">Signup</a>
       <a href="/profile">Profile</a>
+      <a href="/products">Products</a>
     </div>
     {{{body}}}
   </body>
