--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,13 +1,24 @@
-<h1>LOGIN</h1>
-
-<a href="/api/sessions/github">Registrarse con github</a></br>
-
+<h2>LOGIN</h2>
 <form method="post" action="api/sessions/login">
-  <input type="email" placeholder="email" name="email" />
+  <label for="email">E-MAIL</label>
+  <input
+    type="email"
+    placeholder="email"
+    name="email"
+    style="font-size:18pt;"
+  />
   <br />
-  <input type="password" placeholder="password" name="password" />
+  <label for="password">PASSWORD</label>
+  <input
+    type="password"
+    placeholder="password"
+    name="password"
+    style="font-size:18pt;"
+  />
   <br />
   <button type="submit">Login</button>
 </form>
 
-<a href="/signup">New User? Signup</a>
+<a href="/api/sessions/github">Login with GITHUB</a>
+<br /><br />
+<a href="/signup">New User? Local Signup</a>
