--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -4,7 +4,7 @@
     <div
       style="width:80%; background-color: #e6e4e4; font-size: 25px; color:#000000"
     >
-      <h3>Bienvenido {{name}} {{email}}</h3>
+      <h3>Bienvenido {{name}} {{email}} {{role}}</h3>
       <a href="/api/sessions/logout">Logout</a>
     </div>
     <div>
