--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,3 +1,6 @@
-<h1>PROFILE</h1>
+<h2>PROFILE</h2>
 
 <a href="/api/sessions/logout">Cerrar Sesión</a>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/index.js"></script>
