--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -1,13 +1,25 @@
-<h1>REGISTER</h1>
+<h2>REGISTER</h2>
 
 <form method="post" action="api/sessions/signup">
-  <input type="text" placeholder="name" name="name" />
+  <label for="name">NAME</label>
+  <input type="text" placeholder="name" name="name" style="font-size:18pt;" />
   <br />
-  <input type="number" placeholder="edad" name="age" />
+  <label for="email">E-MAIL</label>
+  <input
+    type="email"
+    placeholder="email"
+    name="email"
+    style="font-size:18pt;"
+  />
   <br />
-  <input type="email" placeholder="email" name="email" />
+  <label for="password">PASSWORD</label>
+  <input
+    type="password"
+    placeholder="password"
+    name="password"
+    style="font-size:18pt;"
+  />
   <br />
-  <input type="password" placeholder="password" name="password" />
   <br />
   <button type="submit">Signup</button>
 </form>
